apps/web/src/app/design/css/components/pinion.css
.pinion {
  @apply box-px box-my relative w-full;

  .pinion-section & {
    @apply box-[my(section)] px-0;
  }
}

.pinion-inner {
  @apply max-w-content align-center;
}

.pinion-textBlock {
  .pinion-inner {
    @apply max-w-base;
  }
}

.pinion-cards,
.pinion-cardsBlock,
.pinion-featureCards,
.pinion-faqs,
.pinion-cta,
.pinion-embed,
.pinion-logoGrid,
.pinion-gallery,
.pinion-hero,
.pinion-section,
.pinion-tableBlock,
.pinion-textColumns,
.pinion-textWithStats,
.pinion-mediaWithText,
.pinion-mediaWithTextSticky,
.pinion-mediaWithItems,
.pinion-resourceCards,
.pinion-resourceCard,
.pinion-testimonialBlock,
.pinion-upsell,
.pinion-addOnCards,
.pinion-comparePlans,
.pinion-video {
  .pinion-inner {
    @apply max-w-base;
  }

  &.has-background {
    @apply box-py !m-0;
  }
}

.pinion-featureCards,
.pinion-cta,
.pinion-mediaWithItems,
.pinion-testimonialBlock {
  @apply overflow-hidden;
}

.pinion-marquee {
  @apply overflow-hidden;

  .pinion-inner {
    @apply max-w-none;
  }
}

.pinion-media {
  .pinion-inner {
    @apply max-w-cols10;
  }

  &.has-background {
    @apply !m-0;
  }
}

.pinion-imageSlider,
.pinion-slider {
  @apply overflow-hidden;

  .pinion-inner {
    @apply max-w-base;
  }
}

